packages/svelte/tests/compiler-errors/samples/css-global-block-combinator/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-css-global-block-combinator',
		message: 'A :global {...} block cannot follow a > combinator',
		position: [12, 21]
	}
});
